--- a/public/courses/example/example2/index.html
+++ b/public/courses/example/example2/index.html
@@ -257,7 +257,7 @@ Tip 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#projects"><span>Projects</span></a>
+          <a class="nav-link " href="/#projects"><span>Software</span></a>
         </li>
 
         
