--- a/public/project/zimhmm/index.html
+++ b/public/project/zimhmm/index.html
@@ -785,7 +785,7 @@
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/mixhmm/">mixHMM</a></li>
+      <li><a href="/project/mixnbhmm/">mixNBHMM</a></li>
       
     </ul>
   </div>
