Add GitHub chart

--- a/public/index.html
+++ b/public/index.html
@@ -576,6 +576,30 @@
 <p>I graduated from <a href="https://www.unicamp.br/unicamp/english" target="_blank">University of Campinas</a>, Brazil, with BSc and MSc degrees in statistics in 2012 and 2014, respectively, under the direction of <a href="https://bv.fapesp.br/en/pesquisador/90874/hildete-prisco-pinheiro/" target="_blank">Dr. Hildete Pinheiro</a>. After a period abroad at <a href="https://international.au.dk/" target="_blank">University of Aarhus</a>, Denmark, my MSc thesis concerned the application of generalized linear mixed models to study genetic and environmental factors associated with the prevalence of metritis in Danish Holstein cows.</p>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+<figure>
+
+
+  <a data-fancybox="" href="http://ghchart.rshah.org/plbaldoni" >
+<img src="http://ghchart.rshah.org/plbaldoni" alt="plbaldoni&#39;s Github chart" ></a>
+
+
+
+</figure>
+
+
+
     <div class="row">
 
       
