--- a/public/index.html
+++ b/public/index.html
@@ -1721,7 +1721,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/talk/hchs2019_2/" >HCHS/SOL Statistics Committee Meetings</a>
+      <a href="/talk/hchs2019_2/" >On the use of Regression Calibration in a Complex Survey Design with Application to the Hispanic Community Health Study/Study of Latinos</a>
     </h3>
 
     
@@ -1937,7 +1937,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/talk/hchs2019_1/" >HCHS/SOL Dietary Scientific Interest Group Meetings</a>
+      <a href="/talk/hchs2019_1/" >Statistical Strategies for the Analysis of Diet-Disease Models that Correct for Error-Prone Exposures</a>
     </h3>
 
     
